Fixing screenshots wrapping on extensions page

--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 2rem;
     margin-bottom: 2rem;
 }
